[project]
name = "chris-aoc-solutions"
version = "0.0.1"
dependencies = [
    "chris-aoc-solutions-common",
    "tqdm",
    "numpy",
]
requires-python = ">=3.13"
authors = [
  {name = "Chris Marsh", email = "c.marshian@gmail.com"}
]
maintainers = [
  {name = "Chris Marsh", email = "c.marshian@gmail.com"}
]
description = "My collection of answers to Advent of Code problems"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[tool.uv.sources]
chris-aoc-solutions-common = { path = "python_common", editable = true }
